stopping point for aligning flex box in main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     body {
         margin-left: 13%;
         margin-right: 13%;
+        font-size: medium;
     }
 }
 
@@ -20,11 +21,17 @@
     * {
         font-size: small;
     }
+    .img {
+        transform: scale(0.75);
+    }
 }
 
 @media screen and (max-width: 380px) {
     * {
         font-size: x-small;
+    }
+    .img {
+        transform: scale(0.5);
     }
 }
 
@@ -41,11 +48,17 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-image: url(../images/pexels-markus-spiske-1921326.jpg);
+    /* 
+    https://www.pexels.com/photo/display-coding-programming-development-1921326/ 
+    https://www.pexels.com/@markusspiske/
+    */
+    background-size: cover;
 }
 
 .header {
     font-family: var(--Header-footer-font);
-    background-color: #13293d;
+    background-color: rgba(0, 0, 0, 0.699);
     color: #fff;
     padding: 1%;
     display: flex;
@@ -73,7 +86,7 @@ body {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    justify-content: right;
+    justify-content: center;
     font-size: large;
 }
 .header nav ul a {
@@ -95,10 +108,12 @@ body {
 .main {
     display: flex;
     flex-direction: column;
-    flex: 1 0 auto;
-    background-color: #fcfcfc;
+    align-items: stretch;
+    flex: 1 1 auto;
+    background-color: rgba(0, 0, 0, 0.699);
     padding: 5%;
     margin: 0% 2% 0% 2%;
+    color: #fff;
 }
 
 .footer {
@@ -110,6 +125,69 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 2%;
-    background: #13293d;
+    background: rgba(0, 0, 0, 0.699);
     min-height: 5vh;
+}
+
+article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2%;
+    flex-basis: 100%;
+}
+
+article p {
+    margin: 1%;
+    flex-basis: 100%;
+}
+
+.article-title {
+    font-style: italic;
+}
+
+.article-img {
+    flex-basis: 150px;
+    align-self: flex-start;
+    min-width: 10px;
+    flex-shrink: 1;
+}
+
+h2 {
+    display: flex;
+    position: relative;
+    white-space: nowrap;
+    padding: 2%;
+    margin-right: 2%;
+    flex-basis: 300px;
+    flex: 1 1 auto;
+}
+
+h2::before,
+h2::after {
+    display: flex;
+    content: "";
+    position: absolute;
+    border-style: solid;
+    border-color: yellow;
+    border-width: 0 2px 2px 0;
+}
+
+h2:before {
+    top: 50%;
+    left: -10%;
+    width: 10%;
+    height: 50%;
+    transform: rotate(90deg) translateY(-50%);
+}
+
+h2:after {
+    bottom: 50%;
+    right: -10%;
+    width: 10%;
+    height: 50%;
+    transform: rotate(-90deg) translateY(-50%);
+}
+article p {
+    /* margin: 5%; */
 }
